--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJWilck Games</title>
+    <title>TabletTop Games</title>
 </head>
+
 <body>
-    <h1>Welcome to DJWilck Games. </h1>
+    <header>
+        <img class="logo" src="images/logo.png" alt="logo for Temple Inn & Suites">
+        <div>
+            <h1>Welcome to TabletTop Games. </h1>
+            <h6>Name not final.</h6>
+        </div>
+    </header>
+
     <nav>
         <ul>
             <li>Start a Game</li>
             <li><a href="/currentGame.html">Join a Game</a></li>
             <li>Resume a Game</li>
             <li>Create a Character</li>
-
         </ul>
     </nav>
 
+    <main>
+
+    </main>
+    <footer>
+        <p>&copy; <span id="copyright"></span> D. Joseph Wilcken | <a href="references.html">References</a> | <span
+                id="updated"></span></p>
+    </footer>
 </body>
+
 </html>
