Website structure start

--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TabletTop Games</title>
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+
 </head>
 
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="logo for Temple Inn & Suites">
+        <img class="logo" src="images/logo.png" alt="logo for TabletTop Games">
         <div>
-            <h1>Welcome to TabletTop Games. </h1>
+            <h1>TabletTop Games.</h1>
             <h6>Name not final.</h6>
         </div>
     </header>
 
     <nav>
-        <ul>
-            <li>Start a Game</li>
-            <li><a href="/currentGame.html">Join a Game</a></li>
-            <li>Resume a Game</li>
-            <li>Create a Character</li>
+        <ul class = "navigation">
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">Start a Table</a></li>
+            <li><a href="/currentGame.html">Join a Table</a></li>
+            <li><a href="#">Character Creation</a></li>
         </ul>
     </nav>
 
     <main>
-
+        <div class="placeholder map">
+            <p>Hello</p>
+        </div>
     </main>
     <footer>
         <p>&copy; <span id="copyright"></span> D. Joseph Wilcken | <a href="references.html">References</a> | <span
