--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="logo for TabletTop Games">
+        <!--<img class="logo" src="images/logo.png" alt="logo for TabletTop Games">-->
         <div>
-            <h1>TabletTop Games.</h1>
-            <h6>Name not final.</h6>
+            <h1>TabletTop Games</h1>
+            <h6>Name not final</h6>
         </div>
     </header>
 
     <nav>
         <ul class = "navigation">
+            <li id="menu"><a href="#" onclick="toggleMenu('menu')">&#9776; Menu</a></li>
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Start a Table</a></li>
             <li><a href="/currentGame.html">Join a Table</a></li>
@@ -31,7 +32,6 @@
 
     <main>
         <div class="placeholder map">
-            <p>Hello</p>
         </div>
     </main>
     <footer>
