--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
 
 </head>
 
@@ -27,12 +28,12 @@
             <li><a href="#">Start a Table</a></li>
             <li><a href="/currentGame.html">Join a Table</a></li>
             <li><a href="#">Character Creation</a></li>
+            <li><a href="/trial1.html">Game Trial</a></li>
         </ul>
     </nav>
 
     <main>
-        <div class="placeholder map">
-        </div>
+        <div class="placeholder" id="phaserMap"><!--<script src="js/phaserTest.js"></script>--></div>
     </main>
     <footer>
         <p>&copy; <span id="copyright"></span> D. Joseph Wilcken | <a href="references.html">References</a> | <span
