--- a/trial1.html
+++ b/trial1.html
@@ -12,6 +12,8 @@
         <div id="player"></div>
         <div id="block"></div>
     </div>
+
+    <img src="/assets/sprite.png" alt="">
 </body>
     <script src="js/trial1.js"></script>
 </html>
