--- a/trial1.html
+++ b/trial1.html
@@ -14,6 +14,7 @@
     </div>
 
     <img src="/assets/sprite.png" alt="">
+    <img src="/assets/Sprite Wizard Thin.png" alt="" srcset="">
 </body>
     <script src="js/trial1.js"></script>
 </html>
