--- a/sprites.html
+++ b/sprites.html
@@ -59,18 +59,11 @@
      </style>
 </head>
 <body>
+
     <div class="Character">
-        <img class="Character_spritesheet pixelart face-down" src="/assets/sprite.png" alt="Character" />
+        <img class="Character_spritesheet pixelart face-down" src="/assets/Sprite Wizard Texture.png" alt="Character" /> 
      </div>
-    <div class="Character">
-        <img class="Character_spritesheet pixelart face-down" src="/assets/Sprite Wizard Thin.png" alt="Character" /> 
-     </div>
-     <div class="Character">
-        <img class="Character_spritesheet pixelart face-left" src="/assets/sprite.png" alt="Character" />
-     </div>
-    <div class="Character">
-        <img class="Character_spritesheet pixelart face-left" src="/assets/Sprite Wizard Thin.png" alt="Character" /> 
-     </div>
+
 
 </body>
 </html>
