--- a/cards.html
+++ b/cards.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/css/card.css">
 </head>
 <body>
+
     <div id="table">
+
         <div id="deck" class="pile"></div>
         <div id="discard" class= "pile"></div>
         <div id="player1" class= "hand"></div>
@@ -19,6 +21,8 @@
             <option value="shuffle"> Shuffle Deck </option>  
         </select>  
     </div>
+    <button onclick="list()">View Deck</button>
+    <p id=cardlist></p>
 </body>
 <script src="/js/cards.js"></script>
 </html>
